test/functions/return-type-class-hierarchy/unrelated-no-common-parent.1.good
unrelated-no-common-parent.chpl:4: error: unable to resolve return type
unrelated-no-common-parent.chpl:4: note: could not find a common parent type for the returned class types
